@@ -1,6 +1,9 @@
 Changes in version 3.7.1
 
 - Fix issue in chromPeakSpectra with method = "signal".
+- chromPeakSpectra and featureSpectra return now MS2 spectra with an precursor
+  m/z >= mzmin, <= mzmax and retention time >= rtmin, <= rtmax.
+- Improve performance of chromPeakSpectra and featureSpectra.
 
 
 Changes in version 3.5.5
